Added forgot apssword process

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,6 @@ DB_HOST=<DB_HOST>
 DB_DATABASE=<DB_DATABASE>
 DB_USERNAME=<DB_USERNAME>
 DB_PASSWORD=<DB_PASSWORD>
+
+SENDGRID_API_KEY=<SENDGRID_API_KEY>
+SENDGRID_API_ID=<SENDGRID_API_ID>
